Another small update.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Murugan Pandian . . . 
+Murugan Pandian . . .
+
+This page was created with this command: echo "Murugan Pandian . . . " > index.html 
